--- a/public/components/outside/home/home.html
+++ b/public/components/outside/home/home.html
@@ -2,7 +2,7 @@
   <div class="container has-text-centered">
     <div class="columns">
       <div class="column is-6 is-offset-3">
-        <h1 class="title">There is no place like home</h1>
+        <h1 class="title">Let's get your quiz on!</h1>
         Welcome to Quiz Quest! This is a quiz game for you and your friends that will challange your knowledge but also your speed.
         Just login, if you are already a member, or register, if you are new to the game.
         <br>
