--- a/public/components/inside/results/results.html
+++ b/public/components/inside/results/results.html
@@ -3,8 +3,8 @@
     <h1 class="title is-1">All Top Scores</h1>
 
     <div class="columns is-centered">
-      <div class="column is-4">
-        <table class="table is-striped">
+      <div class="column is-8">
+        <table class="table is-striped is-fullwidth is-hoverable">
           <thead>
             <tr>
               <th>Quiz Name</th>
