--- a/public/components/inside/userResults/userResults.html
+++ b/public/components/inside/userResults/userResults.html
@@ -2,8 +2,8 @@
   <div class="container is-fluid has-text-centered">
     <h1 class="title is-1">Your Top Scores</h1>
     <div class="columns is-centered">
-      <div class="column is-2">
-        <table class="table is-striped">
+      <div class="column is-8">
+        <table class="table is-striped is-fullwidth is-hoverable">
           <thead>
             <tr>
               <th>Quiz Name</th>
