--- a/public/main.less
+++ b/public/main.less
@@ -1,4 +1,4 @@
-.html, body
+html, body
 {
   margin: 0;
   padding: 0;
@@ -13,4 +13,8 @@
 }
 #insideHero{
   background-color: #90C0D8;
+}
+.clickable:hover{
+  cursor: pointer;
+  background-color: #e6f2ff;
 }
