--- a/public/main.less
+++ b/public/main.less
@@ -18,3 +18,20 @@ html, body
   cursor: pointer;
   background-color: #e6f2ff;
 }
+.flex-container{
+  display: flex;
+  flex-direction: column;
+}
+#playCard{
+  background-color: #00d1b1;
+  color: white;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 400%;
+  border-radius: 20px;
+  text-decoration: none;
+}
+#playCard:hover{
+  cursor: pointer;
+  background-color: #00b398;
+}
