bug fix in dashboard

--- a/public/components/inside/dashboard/dashboard.html
+++ b/public/components/inside/dashboard/dashboard.html
@@ -26,7 +26,7 @@
             </div>
           </div>
           <br>
-          <div class="card clickable" ui-sref="app.inside.navbar.userResults">
+          <div class="card clickable" ui-sref="app.inside.navbar.results">
             <header class="card-header">
               <p class="card-header-title is-centered">
               All Top Scores
