--- a/public/components/inside/quizList/quizList.html
+++ b/public/components/inside/quizList/quizList.html
@@ -17,11 +17,11 @@
               <!-- shows the name of the quiz-->
               <td>{{quiz.name}}</td>
               <!-- show the number of players currently in a quiz -->
-              <td>{{quiz.users}}</td>
+              <td>{{quiz.users.length}}</td>
               <!-- shows if the quiz is available to play or not -->
               <td>{{quiz.playing}}</td>
 
-              <td><button class="button" type="button" ng-disabled={{quiz.playing}} name="joinbtn" ng-click="joinGame({{quiz.quizId}})"><i class="fas fa-play"></i></button></td>
+              <td><button class="button" type="button" ng-disabled={{quiz.playing}} name="joinbtn" ng-click="joinGame(quiz.quizId)"><i class="fas fa-play"></i></button></td>
             </tr>
           </tbody>
         </table>
