--- a/public/components/inside/userResults/userResults.html
+++ b/public/components/inside/userResults/userResults.html
@@ -13,9 +13,9 @@
           <tbody>
             <tr ng-repeat="score in results">
               <!-- shows the name of the quiz-->
-              <td>{{quiz.name}}</td>
+              <td>{{quiz.quizId}}</td>
               <!-- show the score for the quiz -->
-              <td>{{quiz.score}}</td>
+              <td>{{quiz.points}}</td>
             </tr>
           </tbody>
         </table>
