--- a/public/main.less
+++ b/public/main.less
@@ -35,3 +35,21 @@ html, body
   cursor: pointer;
   background-color: #00b398;
 }
+#playCardChosen{
+  background-color: darkgrey;
+  color: white;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 400%;
+  border-radius: 20px;
+  text-decoration: none;
+}
+#playCardNotChosen{
+  background-color: lightgrey;
+  color: white;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 400%;
+  border-radius: 20px;
+  text-decoration: none;
+}
