--- a/public/components/inside/results/results.html
+++ b/public/components/inside/results/results.html
@@ -15,11 +15,11 @@
           <tbody>
             <tr ng-repeat="score in results">
               <!-- shows the name of the quiz-->
-              <td>{{quiz.name}}</td>
+              <td>{{quiz.quizId}}</td>
               <!-- show the score for the quiz -->
-              <td>{{quiz.score}}</td>
+              <td>{{quiz.points}}</td>
               <!-- shows the user -->
-              <td>{{quiz.user}}</td>
+              <td>{{quiz.userId}}</td>
             </tr>
           </tbody>
         </table>
