--- a/public/components/inside/quiz/quiz.html
+++ b/public/components/inside/quiz/quiz.html
@@ -9,7 +9,7 @@
               <table class="table is-striped">
                 <tbody>
                   <tr ng-repeat="res in results">
-                    <td>{{res.user}}</td>
+                    <td>{{res.userId}}</td>
                   </tr>
                 </tbody>
               </table>
