--- a/public/components/inside/results/results.html
+++ b/public/components/inside/results/results.html
@@ -13,13 +13,13 @@
             </tr>
           </thead>
           <tbody>
-            <tr ng-repeat="score in results">
+            <tr ng-repeat="score in scores">
               <!-- shows the name of the quiz-->
-              <td>{{quiz.quizId}}</td>
+              <td>{{score.quizId}}</td>
               <!-- show the score for the quiz -->
-              <td>{{quiz.points}}</td>
+              <td>{{score.points}}</td>
               <!-- shows the user -->
-              <td>{{quiz.userId}}</td>
+              <td>{{score.userId}}</td>
             </tr>
           </tbody>
         </table>
