--- a/public/components/inside/userResults/userResults.html
+++ b/public/components/inside/userResults/userResults.html
@@ -11,11 +11,11 @@
             </tr>
           </thead>
           <tbody>
-            <tr ng-repeat="score in results">
+            <tr ng-repeat="score in scores">
               <!-- shows the name of the quiz-->
-              <td>{{quiz.quizId}}</td>
+              <td>{{score.quizId}}</td>
               <!-- show the score for the quiz -->
-              <td>{{quiz.points}}</td>
+              <td>{{score.points}}</td>
             </tr>
           </tbody>
         </table>
