color notification on answer

--- a/public/main.less
+++ b/public/main.less
@@ -35,8 +35,8 @@ html, body
   cursor: pointer;
   background-color: #00b398;
 }
-#playCardChosen{
-  background-color: darkgrey;
+#playCardNotChosen{
+  background-color: lightgrey;
   color: white;
   min-width: 100%;
   min-height: 100%;
@@ -44,8 +44,17 @@ html, body
   border-radius: 20px;
   text-decoration: none;
 }
-#playCardNotChosen{
-  background-color: lightgrey;
+#playCardRight{
+  background-color: #22d15f;
+  color: white;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 400%;
+  border-radius: 20px;
+  text-decoration: none;
+}
+#playCardWrong{
+  background-color: #fe3860;
   color: white;
   min-width: 100%;
   min-height: 100%;
